compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__function_capture__captured_lambda.snap
---
source: compiler-core/src/erlang/tests/function_capture.rs
expression: "\npub fn main() {\n  let func = fn() {\n    fn(x) { x }\n  }\n  let f = func()(_)\n\n  f(0)\n}"
---
----- SOURCE CODE

pub fn main() {
  let func = fn() {
    fn(x) { x }
  }
  let f = func()(_)

  f(0)
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> integer().
main() ->
    Func = fun() ->
        fun(X) ->
            X
        end
    end,
    F = begin
        Tmp = Func(),
        fun(_capture) ->
            Tmp(_capture)
        end
    end,
    F(0).
