compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__function_capture__captured_tuple.snap
---
source: compiler-core/src/erlang/tests/function_capture.rs
expression: "\npub fn main() {\n  let func = fn() {\n    #(Nil, fn(x, y, z) { x + y + z })\n  }\n  let f = func().1(1, _, 2)\n\n  f(0)\n}"
---
----- SOURCE CODE

pub fn main() {
  let func = fn() {
    #(Nil, fn(x, y, z) { x + y + z })
  }
  let f = func().1(1, _, 2)

  f(0)
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> integer().
main() ->
    Func = fun() ->
        {nil, fun(X, Y, Z) ->
            (X + Y) + Z
        end}
    end,
    F = begin
        Tmp = erlang:element(2, Func()),
        fun(_capture) ->
            Tmp(1, _capture, 2)
        end
    end,
    F(0).
